fix gh button overlaps

--- a/assets/sass/welcome.scss
+++ b/assets/sass/welcome.scss
@@ -379,6 +379,7 @@ span.now {
   overflow-x: hidden;
   overflow-y: hidden;
   height: 25px;
+  white-space: nowrap;
 
   i {
     display: inline-block;
